salesforce-port/force-app/main/default/objects/Expense_Violation__c/Expense_Violation__c.object-meta.xml
<CustomObject>
    <label>Expense Violation</label>
    <nameField>
        <displayFormat>VIO-{000000}</displayFormat>
        <label>Violation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>