salesforce-port/force-app/main/default/objects/Expense_Violation__c/fields/Duplicate_Expense__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Expense__c</fullName>
    <label>Duplicate Expense</label>
    <type>Lookup</type>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Duplicate Violations</relationshipLabel>
    <relationshipName>Duplicate_Violations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>