salesforce-port/force-app/main/default/objects/Expense_Violation__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>Expense</label>
    <type>MasterDetail</type>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Violations</relationshipLabel>
    <relationshipName>Violations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>