salesforce-port/force-app/main/default/objects/Expense_Violation__c/fields/Violation_Type__c.field-meta.xml
<CustomField>
    <fullName>Violation_Type__c</fullName>
    <label>Violation Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Over_Limit</fullName><default>false</default><label>Over Limit</label></value>
            <value><fullName>Receipt_Required</fullName><default>false</default><label>Receipt Required</label></value>
            <value><fullName>Duplicate</fullName><default>false</default><label>Duplicate</label></value>
            <value><fullName>Over_Age</fullName><default>false</default><label>Over Age Limit</label></value>
            <value><fullName>Category_Required</fullName><default>false</default><label>Category Required</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom Rule</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>